syntax = "proto3";
package kava.community.v1beta1;

import "gogoproto/gogo.proto";
import "kava/community/v1beta1/community.proto";

option go_package = "github.com/kava-labs/kava/x/community/types";

// GenesisState defines the community module's genesis state.
message GenesisState {
  // Params defines all the parameters of the module.
  Params params = 1 [(gogoproto.nullable) = false];
}
