syntax = "proto3";
package kava.pricefeed.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/kava-labs/kava/x/pricefeed/types";

// Params defines the parameters for the pricefeed module.
message Params {
  option (gogoproto.goproto_stringer) = false; // false here because we define Stringer method in params.go
  repeated Market markets             = 1 [(gogoproto.nullable) = false];
}

// Market defines an asset in the pricefeed.
message Market {
  option (gogoproto.goproto_stringer) = false;

  string          market_id   = 1 [(gogoproto.customname) = "MarketID"];
  string          base_asset  = 2;
  string          quote_asset = 3;
  repeated string oracles     = 4;
  bool            active      = 5;
}

// PostedPrice defines a price for market posted by a specific oracle.
message PostedPrice {
  option (gogoproto.goproto_stringer) = false;

  string market_id      = 1 [(gogoproto.customname) = "MarketID"];
  bytes  oracle_address = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string price = 3 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  google.protobuf.Timestamp expiry = 4 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

// CurrentPrice defines a current price for a particular market in the pricefeed
// module.
message CurrentPrice {
  option (gogoproto.goproto_stringer) = false;

  string market_id = 1 [(gogoproto.customname) = "MarketID"];
  string price = 2 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
}
